--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,8 @@
     <title>HRI Pattern App</title>
     <!-- Project files -->
     <link rel="stylesheet" type="text/css" href="./style/css/main.css">
+    <link rel="stylesheet" type="text/css" href="./style/css/slick.min.css">
+    <link rel="stylesheet" type="text/css" href="./style/css/slick-theme.min.css">
   </head>
   <body>
       <!-- main react entry point -->
